CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(Scheduling CXX C)

SET(PROJECT_ROOT ${CMAKE_SOURCE_DIR})

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")

INCLUDE(FindLibVirt)
INCLUDE(enableCXX11)


MESSAGE(STATUS "Compile Scheduling Virtual Machine on KVM")

SET(SOURCE_INCLUDE ${PROJECT_ROOT}/include)
INCLUDE_DIRECTORIES(${SOURCE_INCLUDE})
ADD_SUBDIRECTORY(src bin)